css fix for overflow scrollbar appearing on job message headers

--- a/src/DataDock.Web/wwwroot/css/site.css
+++ b/src/DataDock.Web/wwwroot/css/site.css
@@ -375,3 +375,7 @@ pre.rawJson {
     white-space: -o-pre-wrap; /* Opera 7 */
     word-wrap: break-word; /* Internet Explorer 5.5+ */
 }
+
+#jobs .ui.message .content {
+    overflow:visible !important;
+}
